--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #495057;
-    margin: 0;
-    padding: 0;
+    background-color: #f1f3f5;
 }
+.main-c{
+    background-color: #f8f9fa;
+    box-shadow: 0 0 10px rgba(33,37,41,.05);
+    width: 80%;
+    height: 650px;
+}
+/*background-color: #c2d9e9;*/
