--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,5 +19,23 @@ body{
     height: 300px;
     border-radius: 50%;
     background-color: #8ebed1;
+    box-shadow: 0px 0px px rgba(0,0,0,.09);
 }
 /*background-color: #c2d9e9;*/
+@media (max-width: 576px) { 
+    .main-c{
+        background-color: #f0f1f3;
+        box-shadow: 20px 50px 40px rgba(0,0,0,.08);
+        margin-top: 160px;
+        margin-bottom: auto;
+        width: 100%;
+        height: 400px;
+    }
+    .logo-bg{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: #8ebed1;
+        box-shadow: 0px 0px px rgba(0,0,0,.09);
+    }
+ }
