--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,10 +26,8 @@ body{
     .main-c{
         background-color: #f0f1f3;
         box-shadow: 20px 50px 40px rgba(0,0,0,.08);
-        margin-top: 160px;
-        margin-bottom: auto;
         width: 100%;
-        height: 400px;
+        max-height: 100%;
     }
     .logo-bg{
         width: 200px;
